src/objects/Contact.object
<CustomObject><fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never Active</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Previously Active</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Motivated</fullName>
                </value>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Napping</fullName>
                </value>
                <value>
                    <fullName>Sleeping</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Trained</fullName>
                    <isActive>false</isActive>
                    <label>Trained</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Approval_Sub_Status__c</fullName>
        <label>Approval Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied by Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Terminated (Production)</fullName>
                </value>
                <value>
                    <fullName>Terminated (Leadership Request)</fullName>
                </value>
                <value>
                    <fullName>Terminated (DTRT)</fullName>
                </value>
                <value>
                    <fullName>Terminated (Performance)</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Approved_Date__c</fullName>
        <description>ORMSFDC-1222</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Assigned_Credit_Risk_Analyst__c</fullName>
        <formula>Account.Assigned_Credit_Risk_Analyst__r.FirstName + ' ' +  Account.Assigned_Credit_Risk_Analyst__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Credit Risk Analyst</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Assigned_PCS__c</fullName>
        <formula>Account.Assigned_PCS__r.FirstName + ' ' + Account.Assigned_PCS__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned PCS</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Check_to_create_a_Prospective_User_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to create a Prospective Portal User login</inlineHelpText>
        <label>Check to create a Prospective User Login</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Contact_Image__c</fullName>
        <label>Contact Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Contact_NMLS__c</fullName>
        <label>NMLS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Corporate_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Resolution</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Date_of_Board_Approval__c</fullName>
        <label>Date of Board Approval</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Days_since_Approval__c</fullName>
        <formula>TODAY()-Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Ext__c</fullName>
        <label>Ext.</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>An email from QLMS</fullName>
                </value>
                <value>
                    <fullName>A Flyer about QLMS</fullName>
                </value>
                <value>
                    <fullName>Someone in the industry</fullName>
                </value>
                <value>
                    <fullName>Through Comergence</fullName>
                </value>
                <value>
                    <fullName>A pricing tool (Loan Sifter)</fullName>
                </value>
                <value>
                    <fullName>An article or a blog</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>Trade Magazine</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Web Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Individual_Lead_source__c</fullName>
        <label>Individual Lead source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>TradeShow</fullName>
                </value>
                <value>
                    <fullName>QLMS Website</fullName>
                </value>
                <value>
                    <fullName>Internet search</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Purchased list</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Individual_lead_Status__c</fullName>
        <label>Individual lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Application Sent</fullName>
                    <isActive>false</isActive>
                    <label>Application Sent</label>
                </value>
                <value>
                    <fullName>Converted</fullName>
                    <isActive>false</isActive>
                    <label>Converted</label>
                </value>
                <value>
                    <fullName>Hot</fullName>
                    <isActive>false</isActive>
                    <label>Hot</label>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Not Qualified</label>
                </value>
                <value>
                    <fullName>Warm</fullName>
                    <isActive>false</isActive>
                    <label>Warm</label>
                </value>
                <value>
                    <fullName>cold</fullName>
                    <isActive>false</isActive>
                    <label>cold</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Is_this_user_an_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this user an Owner?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Login_Time__c</fullName>
        <label>Last Login Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Last_Significant_Contact_Date__c</fullName>
        <label>Last Significant Contact Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>Account.BillingStreet + ' ' +  Account.BillingCity + ' ' +  Account.BillingState + ' ' +  Account.BillingPostalCode + ' ' +  Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>NMLS_ID_Expiration_Date__c</fullName>
        <label>NMLS ID Expiration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>NMLS_ID_Issued_Date__c</fullName>
        <label>NMLS ID Issued Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Name__c</fullName>
        <formula>FirstName + ' ' + LastName</formula>
        <label>Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ORM_Account_Executive_Email__c</fullName>
        <formula>Account.ORM_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORM Account Executive Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ORM_Account_Executive_Name__c</fullName>
        <formula>Account.Account_Executive_Name__r.FirstName + ' ' +  Account.Account_Executive_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORM Account Executive Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ORM_Account_Executive_Title__c</fullName>
        <formula>Account.ORM_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORM Account Executive Title</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ORM_Anniversary__c</fullName>
        <formula>IF( Days_since_Approval__c = 365, "1 year", 
IF( Days_since_Approval__c = 730, "2 year", 
IF( Days_since_Approval__c = 1095, "3 year", 
IF( Days_since_Approval__c = 1460, "4 year", 
IF( Days_since_Approval__c = 1826, "5 year", 
IF( Days_since_Approval__c = 2191, "6 year", 
IF( Days_since_Approval__c = 2556, "7 year", 
IF( Days_since_Approval__c = 2921, "8 year", 
IF( Days_since_Approval__c = 3287, "9 year", 
IF( Days_since_Approval__c = 3652, "10 year", 
IF( Days_since_Approval__c = 4017, "11 year", 
IF( Days_since_Approval__c = 4382, "12 year", 
IF( Days_since_Approval__c = 4748, "13 year", 
IF( Days_since_Approval__c = 5113, "14 year", 
IF( Days_since_Approval__c = 5478, "15 year", 
IF( Days_since_Approval__c = 5843, "16 year", 
IF( Days_since_Approval__c = 6209, "17 year", 
IF( Days_since_Approval__c = 6574, "18 year", 
IF( Days_since_Approval__c = 6939, "19 year", 
IF( Days_since_Approval__c = 7304, "20 year", 
"" 
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORM Anniversary</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Ownership_Percentage__c</fullName>
        <label>Ownership Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PPU_Loan_Production_Status__c</fullName>
        <label>PPU Loan Production Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Portal User/Never Engaged</fullName>
                </value>
                <value>
                    <fullName>Aged Partner/Never Engaged</fullName>
                </value>
                <value>
                    <fullName>Producing</fullName>
                </value>
                <value>
                    <fullName>Pre-Dormant</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Aged Partner</fullName>
                    <isActive>false</isActive>
                    <label>Aged Partner</label>
                </value>
                <value>
                    <fullName>New Partner</fullName>
                    <isActive>false</isActive>
                    <label>New Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>PPU_Total_Loan_Stage__c</fullName>
        <label>PPU Total Loan Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Producing</fullName>
                </value>
                <value>
                    <fullName>Pre-Dormant</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Never Engaged</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Motivated</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Partner_Denial_Reasons__c</fullName>
        <label>Partner Denial Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Reputation Report</fullName>
                </value>
                <value>
                    <fullName>MARI Report</fullName>
                </value>
                <value>
                    <fullName>Exclusionary List</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Resume</fullName>
                </value>
                <value>
                    <fullName>Company Formation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Potential_Portal_User_Status__c</fullName>
        <label>Potential Portal User Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>Training In Process</fullName>
                </value>
                <value>
                    <fullName>Complete/Approved</fullName>
                </value>
                <value>
                    <fullName>Complete/Denied</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>QLMS_12_Month_Closing_Volume_Purchase__c</fullName>
        <label>QLMS 12 Month Closing Volume Purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Closing_Volume_Refi__c</fullName>
        <label>QLMS 12 Month Closing Volume Refi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Closing_Volume__c</fullName>
        <label>QLMS 12 Month Closing Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Closings_Purchase__c</fullName>
        <label>QLMS 12 Month Closings Purchase</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Closings_Refi__c</fullName>
        <label>QLMS 12 Month Closings Refi</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Closings__c</fullName>
        <label>QLMS 12 Month Closings</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Folder_Volume_Purchase__c</fullName>
        <label>QLMS 12 Month Folder Volume Purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Folder_Volume_Refi__c</fullName>
        <label>QLMS 12 Month Folder Volume Refi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Folder_Volume__c</fullName>
        <label>QLMS 12 Month Folder Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Folders_Purchase__c</fullName>
        <label>QLMS 12 Month Folders Purchase</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Folders_Refi__c</fullName>
        <label>QLMS 12 Month Folders Refi</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_12_Month_Folders__c</fullName>
        <label>QLMS 12 Month Folders</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Closing_Volume_Purchase__c</fullName>
        <label>QLMS 6 Month Closing Volume Purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Closing_Volume_Refi__c</fullName>
        <label>QLMS 6 Month Closing Volume Refi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Closing_Volume__c</fullName>
        <label>QLMS 6 Month Closing Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Closings_Purchase__c</fullName>
        <label>QLMS 6 Month Closings Purchase</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Closings_Refi__c</fullName>
        <label>QLMS 6 Month Closings Refi</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Closings__c</fullName>
        <label>QLMS 6 Month Closings</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Folder_Volume_Purchase__c</fullName>
        <label>QLMS 6 Month Folder Volume Purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Folder_Volume_Refi__c</fullName>
        <label>QLMS 6 Month Folder Volume Refi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Folder_Volume__c</fullName>
        <label>QLMS 6 Month Folder Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Folders_Purchase__c</fullName>
        <label>QLMS 6 Month Folders Purchase</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Folders_Refi__c</fullName>
        <label>QLMS 6 Month Folders Refi</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_6_Month_Folders__c</fullName>
        <label>QLMS 6 Month Folders</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>QLMS_Account_Executive__c</fullName>
        <formula>Account.QLMS_Account_Executive__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLMS Account Executive</label>
        <type>Text</type>
    </fields><fields>
        <fullName>QLMS_Contact_ID__c</fullName>
        <label>QLMS Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>QLMS_First_Name__c</fullName>
        <formula>LEFT(QLMS_Account_Executive__c , FIND(" ", QLMS_Account_Executive__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLMS First Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Related_Branch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Branch</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Branches__c.Business_Partners_Acc__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Branches__c</referenceTo>
        <relationshipLabel>Business Individuals</relationshipLabel>
        <relationshipName>Business_Individuals</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>15</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields><fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Time_Zone__c</fullName>
        <formula>if( ISBLANK(Office_Phone__c),"--", 

if( CONTAINS("206:209:213:253:310:323:360:408:415:425:503:509:510:530:559:562:604:619:626:650:661:702:707:714:760:775:778:805:818:831:858:867:909:916:925:949:951:971:236:250:604:778:867", left(SUBSTITUTE( Office_Phone__c , "(", ""),3)), 
"Pacific", 

if( 
CONTAINS("208:250:303:307:385403:406:435:480:505:520:602:623:719:720:780:801:928:970:403:587:780", left(SUBSTITUTE( Office_Phone__c , "(", ""),3)),"Mountain", 

if( 
CONTAINS("204:205:210:214:217:218:224:225:228:251:254:256:262:270:281:306:308:309:312:314:316:318:319:320:325:334:337:361:402:405:409:414:417:430:432:469:479:501:504:507:512:515:563:573:580:601:605:608:612:615:618:620:630:636:641:651:660:662:682:708:712:713:715:731:763:769:773:785:806:815:816:817:830:832:847:901:903:913:915:918:920:931:936:940:952:956:972:979:985:204:306:431:639:807", left(SUBSTITUTE( Office_Phone__c , "(", ""),3)),"Central", 

if( 
CONTAINS("201:202:203:207:212:215:216:219:226:229:231:234:239:240:248:252:267:269:276:289:301:302:304:305:313:315:321:330:336:339:345:347:351:352:386:404:407:410:412:416:418:419:434:438:440:443:450:470:475:478:484:502:508:513:514:516:517:518:519:540:551:561:567:570:571:585:586:603:606:607:609:610:613:614:616:617:631:646:647:649:678:703:704:705:706:716:717:718:724:727:732:734:740:754:757:770:772:774:781:786:802:803:804:810:813:814:819:828:835:843:845:848:856:857:859:860:862:863:864:865:876:878:904:905:908:910:912:914:917:919:937:941:947:954:959:973:978:980:226:249:289:343:365:416:437:438:450:514:519:579:581:613:647:705:819:873:905", left(SUBSTITUTE( Office_Phone__c , "(", ""),3)),"Eastern", 

if( 
CONTAINS("506:709:902",LEFT(SUBSTITUTE(Office_Phone__c,"(",""),3)),"Atlantic", 

if( 
CONTAINS("800:877",LEFT(SUBSTITUTE(Office_Phone__c,"(",""),3)),"Toll Free","Other" 
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Zone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Branch Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Market</fullName>
                </value>
                <value>
                    <fullName>Post close contact</fullName>
                </value>
                <value>
                    <fullName>Assistant Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processing manager</fullName>
                </value>
                <value>
                    <fullName>Third party closer</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>QL Banker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <type>Email</type>
    </fields><fields>
        <fullName>userLoginId__c</fullName>
        <label>userLoginId</label>
        <length>18</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><externalSharingModel>ControlledByParent</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>AllContacts</fullName>
        <columns>ORM_Account_Executive_Name__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>evink</value>
        </filters>
        <label>All Contacts</label>
    </listViews><listViews>
        <fullName>All_Approved_Individuals</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Partner_Portal_User</value>
        </filters>
        <label>All Partner Portal Users</label>
    </listViews><listViews>
        <fullName>All_Individual_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Potential_Partner_Portal_User</value>
        </filters>
        <label>All Potential Partner Portal Users</label>
    </listViews><listViews>
        <fullName>Individuals_Created_on_10_30_2017</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/30/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>10/30/2017 12:00 AM</value>
        </filters>
        <label>Individuals Created on 10-30-2017</label>
    </listViews><listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Approval_Sub_Status__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Approved_Date__c</field>
            <operation>notEqual</operation>
            <value>7/5/2018</value>
        </filters>
        <label>My Contacts</label>
    </listViews><recordTypes>
        <fullName>Approved_Individuals</fullName>
        <active>true</active>
        <label>Approved Individuals</label>
    </recordTypes><recordTypes>
        <fullName>Banker</fullName>
        <active>true</active>
        <label>Banker</label>
    </recordTypes><recordTypes>
        <fullName>Client_Portal_User</fullName>
        <active>true</active>
        <label>Client Portal User</label>
    </recordTypes><recordTypes>
        <fullName>Committed_Partner_Portal_User</fullName>
        <active>true</active>
        <label>Committed Partner Portal User</label>
    </recordTypes><recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes><recordTypes>
        <fullName>Individual_Leads</fullName>
        <active>true</active>
        <label>Individual Leads</label>
    </recordTypes><recordTypes>
        <fullName>Partner_Portal_User</fullName>
        <active>true</active>
        <label>Partner Portal User</label>
    </recordTypes><recordTypes>
        <fullName>Potential_Partner_Portal_User</fullName>
        <active>true</active>
        <label>Potential Partner Portal User</label>
    </recordTypes><validationRules>
        <fullName>Contact_AE_Field_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Individual_lead_Status__c , 'Processing'), 
ISPICKVAL( Individual_lead_Status__c , 'Approved'), 
ISPICKVAL( Individual_lead_Status__c , 'Denied'), 
$Profile.Name = "Account Executives Team")</errorConditionFormula>
        <errorMessage>Account Executive Team can choose only 'New'</errorMessage>
    </validationRules>    </validationRules></CustomObject>